--- a/index.html
+++ b/index.html
@@ -514,24 +514,91 @@
 
     <footer class="py-5 debug">
        <div class="container container-sm container-md container-xl d-flex flex-wrap">
-            <div class="col-12 col-sm-12 col-md-12 col-xl-6">
-                cane
+            <div class="col-12 col-sm-12 col-md-12 col-xl-6 py-4">
+                <img class="py-3" src="./img/ps-footer.svg" alt="">
+                <div class="language py-2">
+                    <img src="./img/language-globe.svg" alt="">
+                    Country/Region Italy
+                </div>
             </div>
 
             <div class="col-12 col-sm-12 col-md-4 col-xl-2">
-                gatto
+                <ul class="py-4">
+                    <li>
+                        Link footer n
+                    </li>
+
+                    <li>
+                        Link footer n
+                    </li>
+
+                    <li>
+                        Link footer n
+                    </li>
+
+                    <li>
+                        Link footer n
+                    </li>
+
+                    <li>
+                        Link footer n
+                    </li>
+                </ul>
             </div>
 
             <div class="col-12 col-sm-12 col-md-4 col-xl-2">
-                giovanni
+                <ul class="py-4">
+                    <li>
+                        Link footer n
+                    </li>
+
+                    <li>
+                        Link footer n
+                    </li>
+
+                    <li>
+                        Link footer n
+                    </li>
+
+                    <li>
+                        Link footer n
+                    </li>
+
+                    <li>
+                        Link footer n
+                    </li>
+
+                    <li>
+                        Link footer n
+                    </li>
+
+                    <li>
+                        Link footer n
+                    </li>
+                </ul>
             </div>
 
             <div class="col-12 col-sm-12 col-md-4 col-xl-2">
-                sardella
+                <ul class="py-4">
+                    <li>
+                        Link footer n
+                    </li>
+
+                    <li>
+                        Link footer n
+                    </li>
+
+                    <li>
+                        Link footer n
+                    </li>
+                </ul>
             </div>
 
-            <div class="col-12 col-sm-12 col-md-12 col-xl-6">
-                columbro
+            <div class="col-12 col-sm-12 col-md-12 col-xl-6 py-3">
+                <img class="sie" src="./img/sie-logo.svg" alt="">
+                <p class="py-3">
+                    Website <i class="far fa-copyright"></i>2021 Sony Interactive Entertainment Europe Limited. Tutti i contenuti, nomi dei giochi, nomi commerciali e/o di abbigliamento, marchi registrati, grafica e immagini associati sono marchi registrati e/o materiale protetto da copyright dei rispettivi proprietari. Tutti i diritti riservati. <a class="text-white" href="#">Maggiori info</a>
+                </p>
             </div>
 
        </div> 
