--- a/index.html
+++ b/index.html
@@ -169,9 +169,9 @@
 
     <section class="py-5 three" >
         <div class="section_title">
-            <h5 class="text_blue text-uppercase text-center">
+            <h6 class="text_blue text-uppercase text-center mb-0">
                 play has no limits
-            </h5>
+            </h6>
             <h1 class="text-center">
                 Ecco la Playstation 5
             </h1>
@@ -188,7 +188,9 @@
                 <p class="text-muted mb-4 py-2 px-2">
                     Sperimenta la nuova generazione di incredibili giochi PlayStation
                 </p>
-                <button class="btn_rounder bg_blue text-white p-2 px-3">Maggiori Informazioni</button>
+                <div class="btn_rounder d-inline-block button_cont">
+                    <button class="btn_rounder bg_blue text-white p-2 px-3">Maggiori Informazioni</button>
+                </div>
             </div>
             <div class="col-12 col-sm-12 col-md-7 col-xl-7 img_cont text-center px-3">
                 <img src="./img/playstation-5-thumb.png" alt="ps5 picture">
@@ -196,31 +198,31 @@
         </div>
 
         <div class="container container-sm container-md container-xl d-flex flex-wrap peripherals">
-            <div class="col-4 col-sm-4 col-md-20 col-xl-20 px-3 thumb_cont pb-3">
+            <div class="col-4 col-sm-4 col-md-20 col-xl-20 px-3  thumb_cont active pb-3">
             <img src="./img/playstation-5-thumb.png" alt="ps5 pic">
                 <div class="hidden py-3">
                     Console PS5
                 </div>
             </div>
-            <div class="col-4 col-sm-4 col-md-20 col-xl-20 thumb_cont pb-3 px-1">
+            <div class="col-4 col-sm-4 col-md-20 col-xl-20 thumb_cont pb-3 px-3">
                 <img src="./img/joypad-thumb.png" alt="joypad pic">
                 <div class="hidden py-3">
                     Controller wireless Dualsense<i class="fas fa-trademark"></i>
                 </div>
             </div>
-            <div class="col-4 col-sm-4 col-md-20 col-xl-20 thumb_cont pb-3 px-1">
+            <div class="col-4 col-sm-4 col-md-20 col-xl-20 thumb_cont pb-3 px-3">
                 <img src="./img/headset-thumb.png" alt="headset pic">
                 <div class="hidden py-3">
                     Cuffie wireless con microfono PULSE 3<i class="fas fa-trademark"></i>
                 </div>
             </div>
-            <div class="col-4 col-sm-4 col-md-20 col-xl-20 thumb_cont pb-3 px-1">
+            <div class="col-4 col-sm-4 col-md-20 col-xl-20 thumb_cont pb-3 px-3">
                 <img src="./img/remote-thumb.png" alt="remote pic">
                 <div class="hidden py-3">
                     Telecomando Media
                 </div>
             </div>
-            <div class="col-4 col-sm-4 col-md-20 col-xl-20 thumb_cont pb-3 px-1">
+            <div class="col-4 col-sm-4 col-md-20 col-xl-20 thumb_cont pb-3 px-3">
                 <img src="./img/camera-thumb.jpg" alt="camera pic">
                 <div class="hidden py-3">
                     Telecamera HD
