--- a/index.html
+++ b/index.html
@@ -387,7 +387,9 @@
                 <p class="text-muted">
                     Giochi incredibili live su PS4, con 1TB di spazio di archiviazione.
                 </p>
-                <button class="btn_rounder bg_blue text-white p-2 px-3">Scopri di più</button>
+                <div class="btn_rounder d-inline-block button_cont">
+                    <button class="btn_rounder bg_blue text-white p-2 px-3">Scopri di più</button>
+                </div>
             </div>
             <div class="col-12 col-sm-12 col-md-4 col-xl-4 px-3">
                 <img src="./img/double11-202010-tw-psvr.jpg" alt="vr set pic">
@@ -397,7 +399,9 @@
                 <p class="text-muted">
                     Oltre 500 titoli ed esperienze di gioco. Scoprili tutti.
                 </p>
-                <button class="btn_rounder bg_blue text-white p-2 px-3">Scopri di più</button>
+                <div class="btn_rounder d-inline-block button_cont">
+                    <button class="btn_rounder bg_blue text-white p-2 px-3">Scopri di più</button>
+                </div>
             </div>
             <div class="col-12 col-sm-12 col-md-4 col-xl-4 px-3">
                 <img src="./img/dualshock-4-listing-thumb.jpg" alt="dualshock 4 pic">
@@ -407,7 +411,9 @@
                 <p class="text-muted">
                     Migliora la tua esperienza PS4 con una gamma di accessori ufficiali.
                 </p>
-                <button class="btn_rounder bg_blue text-white p-2 px-3">Scopri di più</button>
+                <div class="btn_rounder d-inline-block button_cont">
+                    <button class="btn_rounder bg_blue text-white p-2 px-3">Scopri di più</button>
+                </div>
             </div>
         </div>
     </section>
