--- a/index.html
+++ b/index.html
@@ -482,7 +482,11 @@
                     <p class="py-5 mb-0 text-white">
                         Ottieni l'accesso immediato a una vastissima raccolta di oltre 800 giochi per PS4, PS3 e PS2 su PS4 o PC Windows con nuovi titoli aggiunti ogni mese.
                     </p>
-                    <button class="btn_rounder text_blue bg_lightergrey px-3 py-2 text-body">Esplora PlayStation Now</button>
+                        <button class="btn_rounder text_blue bg_lightergrey text-body inner_border">
+                            <span class="btn_rounder d-inline-block ">
+                                Esplora PlayStation Now
+                            </span>
+                        </button>
                 </div>
             </div>
 
